# yd-lib-rs

./: .gitignore  Cargo.toml  DockerFile-dev  README.md  build.rs
.devcontainer/: devcontainer.json
crates/yd_client/: Cargo.toml
crates/yd_client_sys/: Cargo.toml  build.rs
crates/yd_client_sys/build_utils/: format_name.rs  function_prototype_handler.rs  mod.rs  record_handler.rs
crates/yd_client_sys/build_utils/handlers/: config.rs  handle_function_parameter.rs  handle_function_prototype.rs  handle_record.rs  mod.rs
crates/yd_client_sys/build_utils/handlers/handle_record/: api.rs  mod.rs  spi.rs
crates/yd_client_sys/examples/: create_yd_listener.rs  create_yd_listener.rs.bak
crates/yd_client_sys/src/: ffi_utils.rs  lib.rs
crates/yd_client_sys/tests/: api_version.rs
examples/: config.txt  create_yd_api.rs  yd_version.rs
src/: ffi_utils.rs  lib.rs
ydClient/ydAPI_c++/win32/: yd.lib
ydClient/ydAPI_c++/win64/: yd.lib
